--- a/src/Components/DashBoard/DashBoard.css
+++ b/src/Components/DashBoard/DashBoard.css
@@ -1,4 +1,16 @@
 .dashboard-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    margin: 40px 10px 10px 10px;
+    padding: 10px 10px;
+}
+
+@media screen and (max-width: 700px) {
+
+    .dashboard-container {
+
+        display: flex;
+        flex-direction: column;
+        margin: 40px 10px 10px 10px;
+    }
 }
