--- a/src/Components/Blogs/Blogs.css
+++ b/src/Components/Blogs/Blogs.css
@@ -1,8 +1,8 @@
-h1 {
+.blog-container h1 {
     text-align: center;
 }
 
-p {
+.blog-container p {
     margin: 0 10px;
     text-align: justify;
 }
