--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -25,24 +25,33 @@
 .home h2 {
     margin-top: 40px;
     text-align: center;
+    font-size: x-large;
 
 }
 
-.home button {
+.btn {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+
+}
+
+.btn button {
     display: inline-block;
     text-decoration: none;
     color: rgb(23, 19, 19);
-    border: 1px solid #fff;
+    background-color: bisque;
     padding: 12px 34px;
     font-size: 13px;
-    background: transparent;
+
     cursor: pointer;
     border: 2px solid bisque;
+    font-size: large;
 
 }
 
-.home button:hover {
-    border: 1px solid #f44336;
-    background: #f44336;
+.btn button:hover {
+    border: 1px solid #c8b434;
+    background: #c8b434;
     transition: 1s;
 }
