--- a/src/Components/DashBoard/DashBoard.css
+++ b/src/Components/DashBoard/DashBoard.css
@@ -1,8 +1,14 @@
 .dashboard-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    margin: 40px 10px 10px 10px;
+    margin-top: 40px;
     padding: 10px 10px;
+}
+
+.graph {
+    margin-bottom: 20px;
+    margin-left: 20px;
+    padding: 20px 20px;
 }
 
 @media screen and (max-width: 700px) {
